--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/drawer": "^7.0.6",
+    "@react-navigation/native": "^7.0.3",
     "expo": "~52.0.9",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.0.2",
     "react": "18.3.1",
-    "react-native": "0.76.2"
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
